--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,6 @@ ul {
   list-style-type: none;
 }
 
-/* Логотип */
 .first-logo {
   font-family: "Raleway", sans-serif;
   text-transform: uppercase;
@@ -52,7 +51,6 @@ ul {
   color: #404bbf;
 }
 
-/* Контакти */
 .email {
   font-weight: 400;
   font-size: 16px;
@@ -70,7 +68,6 @@ ul {
   font-style: normal;
 }
 
-/* Секція герою */
 .header-section {
   background-color: #2e2f42;
 }
@@ -99,7 +96,6 @@ ul {
   background-color: #404bbf;
 }
 
-/* Секція "Наші переваги" */
 .characteristics {
   font-weight: 500;
   font-size: 20px;
@@ -116,12 +112,36 @@ ul {
   color: #434455;
 }
 
-/* Секція "Наша команда" */
 .team-section {
   background-color: var(--cloud);
 }
 
-/* Секція портфоліо */
+.our-team {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  text-align: center;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: #2e2f42;
+}
+
+.members {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+}
+
+.profession {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
+}
+
 .portfolio {
   font-weight: 700;
   font-size: 36px;
@@ -148,7 +168,6 @@ ul {
   color: #434455;
 }
 
-/* Футер */
 .footer {
   background-color: #2e2f42;
   color: var(--cloud);
