--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,3 @@
-:root {
-  --cloud: #f4f4fd;
-}
-
 body {
   font-family: "Roboto", sans-serif;
   color: #434455;
@@ -38,7 +34,6 @@ ul {
   letter-spacing: 0.03em;
 }
 
-/* Меню */
 .menu {
   font-weight: 500;
   font-size: 16px;
@@ -75,9 +70,9 @@ ul {
 .main-header {
   font-weight: 700;
   color: #ffffff;
-  line-height: 1.07;
   font-size: 56px;
   text-align: center;
+  line-height: 1.07;
   letter-spacing: 0.02em;
 }
 
@@ -96,6 +91,10 @@ ul {
   background-color: #404bbf;
 }
 
+.header-two {
+  color: #ffffff;
+}
+
 .characteristics {
   font-weight: 500;
   font-size: 20px;
@@ -112,36 +111,7 @@ ul {
   color: #434455;
 }
 
-.team-section {
-  background-color: var(--cloud);
-}
-
-.our-team {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.11;
-  text-align: center;
-  letter-spacing: 0.02em;
-  text-transform: capitalize;
-  color: #2e2f42;
-}
-
-.members {
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-  color: #2e2f42;
-}
-
-.profession {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #434455;
-}
-
+.our-team,
 .portfolio {
   font-weight: 700;
   font-size: 36px;
@@ -152,6 +122,15 @@ ul {
   color: #2e2f42;
 }
 
+.list {
+  background-color: #ffffff;
+}
+
+.team-section {
+  background-color: var(--cloud);
+}
+
+.members,
 .projects {
   font-weight: 500;
   font-size: 20px;
@@ -160,7 +139,9 @@ ul {
   color: #2e2f42;
 }
 
-.form {
+.profession,
+.form,
+.last {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
@@ -187,14 +168,11 @@ ul {
   color: var(--cloud);
 }
 
-.last {
-  font-weight: 400;
-  font-size: 16px;
+.promo-text {
+  color: #2e2f42;
+  font-size: 18px;
+  font-weight: 500;
   line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: var(--cloud);
-}
-
-.list {
-  background-color: #ffffff;
+  text-align: center;
+  margin: 20px 0;
 }
