--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+:root {
+  --cloud: #f4f4fd;
+}
+
 body {
   font-family: "Roboto", sans-serif;
   color: #434455;
@@ -11,7 +15,6 @@ button {
 a {
   text-decoration: none;
   color: #2e2f42;
-  font-style: normal;
 }
 
 ul {
@@ -91,10 +94,6 @@ ul {
   background-color: #404bbf;
 }
 
-.header-two {
-  color: #ffffff;
-}
-
 .characteristics {
   font-weight: 500;
   font-size: 20px;
@@ -104,14 +103,16 @@ ul {
 }
 
 .definition {
-  font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
 }
 
-.our-team,
+.team-section {
+  background-color: var(--cloud);
+}
+
 .portfolio {
   font-weight: 700;
   font-size: 36px;
@@ -122,15 +123,6 @@ ul {
   color: #2e2f42;
 }
 
-.list {
-  background-color: #ffffff;
-}
-
-.team-section {
-  background-color: var(--cloud);
-}
-
-.members,
 .projects {
   font-weight: 500;
   font-size: 20px;
@@ -139,10 +131,7 @@ ul {
   color: #2e2f42;
 }
 
-.profession,
-.form,
-.last {
-  font-weight: 400;
+.form {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -168,11 +157,13 @@ ul {
   color: var(--cloud);
 }
 
-.promo-text {
-  color: #2e2f42;
-  font-size: 18px;
-  font-weight: 500;
+.last {
+  font-size: 16px;
   line-height: 1.5;
-  text-align: center;
-  margin: 20px 0;
+  letter-spacing: 0.02em;
+  color: var(--cloud);
+}
+
+.list {
+  background-color: #ffffff;
 }
