--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,3 @@
-:root {
-  --cloud: #f4f4fd;
-}
-
 body {
   font-family: "Roboto", sans-serif;
   color: #434455;
@@ -11,18 +7,15 @@ body {
 button {
   cursor: pointer;
 }
-
 a {
   text-decoration: none;
   color: #2e2f42;
   font-style: normal;
 }
-
 ul {
   list-style-type: none;
 }
 
-/* Логотип */
 .first-logo {
   font-family: "Raleway", sans-serif;
   text-transform: uppercase;
@@ -38,21 +31,17 @@ ul {
   font-weight: 700;
   letter-spacing: 0.03em;
 }
-
-/* Меню */
 .menu {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
-
 .menu:hover,
 .menu:focus {
   color: #404bbf;
 }
 
-/* Контакти */
 .email {
   font-weight: 400;
   font-size: 16px;
@@ -60,7 +49,6 @@ ul {
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
-
 .email:hover,
 .email:focus {
   color: #404bbf;
@@ -70,11 +58,6 @@ ul {
   font-style: normal;
 }
 
-/* Секція герою */
-.header-section {
-  background-color: #2e2f42;
-}
-
 .main-header {
   font-weight: 700;
   color: #ffffff;
@@ -82,6 +65,9 @@ ul {
   font-size: 56px;
   text-align: center;
   letter-spacing: 0.02em;
+}
+.header-section {
+  background-color: #2e2f42;
 }
 
 .order-button {
@@ -93,22 +79,36 @@ ul {
   line-height: 1.5;
   letter-spacing: 0.04em;
 }
-
 .order-button:hover,
 .order-button:focus {
   background-color: #404bbf;
 }
 
-/* Секція "Наші переваги" */
-.characteristics {
+.features-section {
+  padding: 60px 0;
+}
+.features-title {
+  font-size: 36px;
+  text-align: center;
+  font-weight: 700;
+  text-transform: capitalize;
+  color: #2e2f42;
+}
+.features-list {
+  display: flex;
+  gap: 24px;
+}
+.feature-item {
+  flex-basis: calc((100% - 72px) / 4);
+}
+.feature-name {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
 }
-
-.definition {
+.feature-description {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
@@ -116,13 +116,11 @@ ul {
   color: #434455;
 }
 
-/* Секція "Наша команда" */
 .team-section {
-  background-color: var(--cloud);
+  background-color: #f4f4fd;
+  padding: 60px 0;
 }
-
-/* Секція портфоліо */
-.portfolio {
+.team-title {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.11;
@@ -131,16 +129,25 @@ ul {
   text-transform: capitalize;
   color: #2e2f42;
 }
-
-.projects {
+.team-list {
+  display: flex;
+  gap: 24px;
+  justify-content: center;
+}
+.team-member {
+  background-color: #ffffff;
+  text-align: center;
+  border-radius: 8px;
+  padding-bottom: 24px;
+}
+.team-name {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
 }
-
-.form {
+.team-role {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
@@ -148,12 +155,47 @@ ul {
   color: #434455;
 }
 
-/* Футер */
-.footer {
-  background-color: #2e2f42;
-  color: var(--cloud);
+.portfolio-section {
+  padding: 60px 0;
+}
+.portfolio-title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  text-align: center;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: #2e2f42;
+}
+.portfolio-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+  justify-content: center;
+}
+.portfolio-item {
+  width: calc((100% - 48px) / 3);
+}
+.portfolio-name {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+}
+.portfolio-type {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
 }
 
+.footer {
+  background-color: #2e2f42;
+  color: #f4f4fd;
+  padding: 40px 0;
+}
 .last-logo {
   color: #4d5ae5;
   font-family: "Raleway", sans-serif;
@@ -163,19 +205,12 @@ ul {
   text-transform: uppercase;
   letter-spacing: 0.03em;
 }
-
 .dark-studio {
-  color: var(--cloud);
+  color: #f4f4fd;
 }
-
 .last {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: var(--cloud);
-}
-
-.list {
-  background-color: #ffffff;
 }
