--- a/css/styles.css
+++ b/css/styles.css
@@ -7,13 +7,17 @@ body {
 button {
   cursor: pointer;
 }
+
 a {
   text-decoration: none;
   color: #2e2f42;
   font-style: normal;
 }
+
 ul {
   list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
 
 .first-logo {
@@ -31,12 +35,14 @@ ul {
   font-weight: 700;
   letter-spacing: 0.03em;
 }
+
 .menu {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
+
 .menu:hover,
 .menu:focus {
   color: #404bbf;
@@ -49,6 +55,7 @@ ul {
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
+
 .email:hover,
 .email:focus {
   color: #404bbf;
@@ -66,8 +73,10 @@ ul {
   text-align: center;
   letter-spacing: 0.02em;
 }
+
 .header-section {
   background-color: #2e2f42;
+  text-align: center;
 }
 
 .order-button {
@@ -79,36 +88,43 @@ ul {
   line-height: 1.5;
   letter-spacing: 0.04em;
 }
+
 .order-button:hover,
 .order-button:focus {
   background-color: #404bbf;
 }
 
-.features-section {
-  padding: 60px 0;
-}
-.features-title {
+.features-title,
+.team-title,
+.portfolio-title {
   font-size: 36px;
   text-align: center;
   font-weight: 700;
   text-transform: capitalize;
   color: #2e2f42;
 }
-.features-list {
-  display: flex;
-  gap: 24px;
+
+.feature-item,
+.team-member,
+.portfolio-item {
+  margin-bottom: 24px;
+  text-align: center;
 }
-.feature-item {
-  flex-basis: calc((100% - 72px) / 4);
-}
-.feature-name {
+
+.feature-name,
+.team-name,
+.portfolio-name {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
 }
-.feature-description {
+
+.feature-description,
+.team-role,
+.portfolio-type,
+.last {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
@@ -118,84 +134,15 @@ ul {
 
 .team-section {
   background-color: #f4f4fd;
-  padding: 60px 0;
-}
-.team-title {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.11;
   text-align: center;
-  letter-spacing: 0.02em;
-  text-transform: capitalize;
-  color: #2e2f42;
-}
-.team-list {
-  display: flex;
-  gap: 24px;
-  justify-content: center;
-}
-.team-member {
-  background-color: #ffffff;
-  text-align: center;
-  border-radius: 8px;
-  padding-bottom: 24px;
-}
-.team-name {
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-  color: #2e2f42;
-}
-.team-role {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #434455;
-}
-
-.portfolio-section {
-  padding: 60px 0;
-}
-.portfolio-title {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.11;
-  text-align: center;
-  letter-spacing: 0.02em;
-  text-transform: capitalize;
-  color: #2e2f42;
-}
-.portfolio-list {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 24px;
-  justify-content: center;
-}
-.portfolio-item {
-  width: calc((100% - 48px) / 3);
-}
-.portfolio-name {
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-  color: #2e2f42;
-}
-.portfolio-type {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #434455;
 }
 
 .footer {
   background-color: #2e2f42;
   color: #f4f4fd;
-  padding: 40px 0;
+  text-align: center;
 }
+
 .last-logo {
   color: #4d5ae5;
   font-family: "Raleway", sans-serif;
@@ -205,12 +152,7 @@ ul {
   text-transform: uppercase;
   letter-spacing: 0.03em;
 }
+
 .dark-studio {
   color: #f4f4fd;
-}
-.last {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
 }
